--- a/css/agency.css
+++ b/css/agency.css
@@ -36,7 +36,7 @@ h6 {
 }
 
 .page-section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 .page-section h2.section-heading {
@@ -49,7 +49,7 @@ h6 {
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
-  margin-bottom: 75px;
+  margin-bottom: 40px;
   text-transform: none;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
@@ -689,3 +689,31 @@ ul.social-buttons li a {
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #fe6f36;
 }
+
+#loginForm {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  visibility:hidden;
+  display:none;
+  background-color: rgba(22,22,22,0.5);
+}
+
+#loginForm:target {
+  visibility: visible;
+  display: block;
+}
+.form-container {
+ 
+  margin: 0 auto;
+  width: 30%; 
+  position:relative; 
+  z-index:41;
+  top: 25%;
+  padding:30px; 
+  -webkit-box-shadow:0 0 10px rgba(0,0,0,0.4);
+  -moz-box-shadow:0 0 10px rgba(0,0,0,0.4); 
+  box-shadow:0 0 10px rgba(0,0,0,0.4);
+}
+
+
