--- a/css/photoconn.css
+++ b/css/photoconn.css
@@ -36,7 +36,7 @@ h6 {
 }
 
 .page-section {
-  padding: 50px 0;
+  padding: 40px 0;
 }
 
 .page-section h2.section-heading {
@@ -197,9 +197,9 @@ header.masthead .intro-text .intro-lead-in {
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 30px;
   margin-bottom: 25px;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
@@ -217,9 +217,9 @@ header.masthead .intro-text .intro-heading {
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 40px;
     font-weight: 700;
-    line-height: 75px;
+    line-height: 40px;
     margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
@@ -724,6 +724,10 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   -webkit-box-shadow:0 0 10px rgba(0,0,0,0.4);
   -moz-box-shadow:0 0 10px rgba(0,0,0,0.4); 
   box-shadow:0 0 10px rgba(0,0,0,0.4);
+}
+
+.white {
+  color: white;
 }
 
 
