--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,6 +2,9 @@
 .btn {
   @include heading-font;
   font-weight: 700;
+  border: 1px solid black;
+  padding: .1rem .4rem;
+  margin: 5px;
 }
 
 .btn-xl {
